@@ -57,8 +57,4 @@
 	- Use in DNS, Apache
 
  - ZIP format backups
-	- home-format backups / single file
-	- home-format restore - $extract not being set or used
-	- restore
-	- CHANGELOG
-	- gpl
+	- backup functional tests for remote and home format
