@@ -1014,7 +1014,8 @@ The CPU time resource limit can now be entered in seconds, rather than minutes. 
 Added a field to the Website Options page for setting the maximum run-time for PHP scripts.
 If the post-modification or creation script for a domain fails, its output is now displayed as an error message.
 Validation now checks that each domain's Unix user and group quotas match what Virtualmin expects.
-Added a DNS template option to have a DNSSEC key generated for new domains, and records automatically signed.
+Added a DNS template option to have a DNSSEC key generated for new domains, and records automatically signed. Requires Webmin 1.443 or later though.
 Email sent to domain owners is now properly encoded so that non-ASCII characters can be included.
 Added a checkbox to the Shared IP Addresses page to allocate a new shared IP, if allocation ranges have been defined.
 Shared IP addresses can now be listed, added and removed from the command line using the new list-shared-addresses.pl, create-shared-address.pl and delete-shared-address.pl scripts.
+Virtual server backups can now be in ZIP format, by changing the 'Backup compression format' option on the Module Config page. TAR format is still recommended though, as it better preserves Unix filesystem attributes.
